force-app/main/default/objects/Project__c/fields/Address_for_Registration__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Registration__c</fullName>
    <label>Address for Registration</label>
    <type>TextArea</type>
</CustomField>