force-app/main/default/objects/Project__c/fields/Basement_Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>Basement_Parking_Charges__c</fullName>
    <label>Basement Parking Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>