force-app/main/default/objects/Project__c/fields/EB_Debris_Charges__c.field-meta.xml
<CustomField>
    <fullName>EB_Debris_Charges__c</fullName>
    <label>EB &amp; Debris Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>