force-app/main/default/objects/Project__c/fields/First_Level_Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Parking_Charges__c</fullName>
    <label>1st Level Parking Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>