force-app/main/default/objects/Project__c/fields/No_of_Maintenance_Years__c.field-meta.xml
<CustomField>
    <fullName>No_of_Maintenance_Years__c</fullName>
    <label>No of Maintenance Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>