force-app/main/default/objects/Project__c/fields/Premium_Charge_Per_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charge_Per_Sq_ft__c</fullName>
    <label>Premium Charge Per Sq ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>