force-app/main/default/objects/Project__c/fields/Project_Head__c.field-meta.xml
<CustomField>
    <fullName>Project_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsqjaH</relationshipName>
    <type>Lookup</type>
</CustomField>