force-app/main/default/objects/Project__c/fields/QC_Engineer__c.field-meta.xml
<CustomField>
    <fullName>QC_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QC Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsqjTp</relationshipName>
    <type>Lookup</type>
</CustomField>