force-app/main/default/objects/Project__c/fields/Second_Level_Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Parking_Charges__c</fullName>
    <label>2nd Level Parking Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>