force-app/main/default/objects/Project__c/fields/Site_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Site_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsqjX3</relationshipName>
    <type>Lookup</type>
</CustomField>