force-app/main/default/objects/Project__c/fields/Stilt_Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>Stilt_Parking_Charges__c</fullName>
    <label>Stilt Parking Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>