force-app/main/default/objects/Project__c/listViews/Last_Month.listView-meta.xml
<ListView>
    <fullName>Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Booked_Units__c</columns>
    <columns>Available_Units__c</columns>
    <columns>Total_Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Last Month</label>
</ListView>