force-app/main/default/objects/Project__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Booked_Units__c</columns>
    <columns>Available_Units__c</columns>
    <columns>Total_Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month</label>
</ListView>